
[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2009???? - 1.22.91

[-] * Fixed setting remote number for SMS in some cases.
[-] * Fixed compilation under cygwin.
[-] * Externalize eventlog support to ease Cygwin compilation.
[!] * Integrate python-gammu into Gammu, they are anyway bound quite
      tightly together.
    
20090109 - 1.22.90

[-] * Fix some memory leaks found by cppcheck.
[-] * Fix unsafe sprintf usage in some modules.
[!] * Improve debugging facilities to use state machine debug
      configuration when possible.
[!] * Separate SMS daemon out of gammu binary.
[!] * SMSD now requires [gammu] section in config file.
[!] * UsePhoneDB option replaced by chekfirmware command.
[+] * Added pkgconfig support for gsmsd (SMSD library).
[+] * Debug logging can be handled by custom function in application.
[+] * SMSD log now includes gammu log messages.
[+] * SMSD now can log to syslog.
[+] * SMSD can now deamonize itself.
[+] * All callbacks can now pass user data along.
[+] * SMSD can now write PID file.
[+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
[+] * SMSD can now natively run as a Windows service (bug #451).
[+] * SMSD debugging can be now enabled by DebugLevel directive.
[-] * Proper reconnecting support for MySQL.
[-] * Better error logging of PostgtreSQL SMSD service.
[-] * SMSD now properly frees allocated memory.
[+] * SMSD now handles SIGHUP for rereading configuration.
[+] * Added LSB init script for SMSD.
[+] * SMSD can now log to stderr/stdout.
[+] * RunOnReceive now can get IDs of received messages.
[-] * Avoid duplicating of same code in command line and tests for
      messages displaying.
[!] * New binary gammu-smsd-inject to inject messages to SMSD.
[!] * Gammu binary now does not support any SMSD operations.
[+] * Sending TEXT message now accepts text using -text parameter.
[+] * Improved logging differentiation of SMSD log messages.